--- a/index.css
+++ b/index.css
@@ -16,6 +16,14 @@
     src: url('./fonts/Jost-Regular.ttf') format('woff');
 }
 
+.disableCaret{
+    -webkit-user-select: none;  /* Chrome all / Safari all */
+    -moz-user-select: none;     /* Firefox all */
+    -ms-user-select: none;      /* IE 10+ */
+     user-select: none;       
+  }
+
+
 * {
     margin: 0;
     padding: 0;
@@ -489,6 +497,7 @@ body:not(.user-is-tabbing) a:focus {
 }
 
 .work__image-box {
+    border: 1px solid var(--pink);
     margin-bottom: var(--gutter-normal);
 }
 
