--- a/index.css
+++ b/index.css
@@ -43,12 +43,15 @@
     --line-height-small: 1.2;
 
     --black: #000;
-    /* --pink: #ff3258; */
+    /* --pink: #ff3258; the original pink */
     --white: #f0e9f2;
-    --white-1: #fdf7ff; /* the text */
-    --shiitake: #c8bcab;
-    --burgandy: #730d00;
-    --pink: #005b4c;
+    --white-1: #fdf7ff; /* the text color */
+    --accent: #008585; 
+    --orange: #c7522a;
+    --orleans: #e5c185;
+    --yellow: #fbf2c4;
+    --green: #74a892;
+
 
     
 
@@ -84,7 +87,7 @@ body {
     font-family: var(--font-stack);
     font-weight: 400;
     /* color: var(--white-1); */
-    color: var(--shiitake);
+    color: var(--orleans);
     line-height: var(--line-height-normal);
     background: var(--black);
     overflow-x: hidden;
@@ -164,7 +167,8 @@ h2::after {
     display: block;
     height: 2px;
     width: 10rem;
-    background: var(--pink);
+    /* background: var(--pink); */
+    background: var(--etheral);
     margin: var(--gutter-small) 0;
 }
 
@@ -215,7 +219,7 @@ a {
 
 button:focus,
 a:focus {
-    outline: 2px solid var(--pink);
+    outline: 2px solid var(--accent);
 }
 
 body:not(.user-is-tabbing) button:focus,
@@ -224,7 +228,7 @@ body:not(.user-is-tabbing) a:focus {
 }
 
 .link:hover {
-    color: var(--pink);
+    color: var(--accent);
 }
 
 .btn {
@@ -233,7 +237,7 @@ body:not(.user-is-tabbing) a:focus {
     padding: 1rem 4.2rem;
     text-decoration: none;
     color: inherit;
-    border: 1px solid  var(--pink);
+    border: 1px solid  var(--accent);
     font-weight: 400;
 }
 
@@ -257,11 +261,11 @@ body:not(.user-is-tabbing) a:focus {
 .btn:hover::after,
 .btn:focus::after {
     right: 0;
-    background: var(--pink);
+    background: var(--accent);
 }
 
 .btn--pink {
-    background: var(--pink);
+    background: var(--accent);
     transition: all 0.2s;
 }
 
@@ -280,7 +284,7 @@ body:not(.user-is-tabbing) a:focus {
     padding: .6rem;
     color: inherit;
     text-decoration: none;
-    border-bottom: 1px solid var(--pink);
+    border-bottom: 1px solid var(--accent);
 }
 
 .link__text::after {
@@ -303,7 +307,7 @@ body:not(.user-is-tabbing) a:focus {
 .link__text:hover::after,
 .link__text:focus:after {
     right: 0;
-    background: var(--pink);
+    background: var(--accent);
 }
 
 .link__text span {
@@ -322,7 +326,7 @@ body:not(.user-is-tabbing) a:focus {
     align-items: center;
     height: 5.5rem;
     width: 5.5rem;
-    background-color: var(--pink);
+    background-color: var(--accent);
     border-radius: 50%;
     z-index: 10;
     visibility: hidden;
@@ -404,13 +408,13 @@ body:not(.user-is-tabbing) a:focus {
 }
 
 .nav__link:hover {
-    color: var(--pink);
+    color: var(--accent);
 }
 
 .nav__link:hover::after {
     right: 0;
     height: 2px;
-    background: var(--pink);
+    background: var(--accent);
 }
 
 /* --------------------------------------- */
@@ -419,7 +423,7 @@ body:not(.user-is-tabbing) a:focus {
 
 .header {
     background: linear-gradient(rgba(0,0,0, .1), rgba(0,0,0, .4)), 
-        url('./images/header.jpg');
+        url('./images/background_img.jpg');
     height: 100vh;
     background-size: cover;
     background-position: center;
@@ -503,7 +507,7 @@ body:not(.user-is-tabbing) a:focus {
 }
 
 .work__image-box {
-    border: 1px solid var(--pink);
+    border: 1px solid var(--accent);
     margin-bottom: var(--gutter-normal);
 }
 
