--- a/index.css
+++ b/index.css
@@ -43,12 +43,13 @@
     --line-height-small: 1.2;
 
     --black: #000;
-    /* --pink: #ff3258; the original pink */
     --white: #f0e9f2;
-    --white-1: #fdf7ff; /* the text color */
+    --text: #e5c185;    
     --accent: #008585; 
-    --orange: #c7522a;
-    --orleans: #e5c185;
+
+    --orleans: #e5c185;  
+    --lapis: #008585;
+    --orange: #c7522a ;
     --yellow: #fbf2c4;
     --green: #74a892;
 
@@ -87,7 +88,7 @@ body {
     font-family: var(--font-stack);
     font-weight: 400;
     /* color: var(--white-1); */
-    color: var(--orleans);
+    color: var(--text);
     line-height: var(--line-height-normal);
     background: var(--black);
     overflow-x: hidden;
@@ -281,7 +282,7 @@ body:not(.user-is-tabbing) a:focus {
 .link__text {
     position: relative;
     display: inline-block;
-    padding: .6rem;
+    padding: 0.6rem 0.6rem 0.6rem 1.6rem;
     color: inherit;
     text-decoration: none;
     border-bottom: 1px solid var(--accent);
